--- a/seller_profile.html
+++ b/seller_profile.html
@@ -194,7 +194,7 @@
           <!-- Support Panel Starts -->
           <div class="tab-pane fade" id="support" role="tabpanel" aria-labelledby="support-tab">
             <div class="mt-3 ml-3">
-              <p>Please refer to the Amazon.in Return Policy.</p>
+              <p>Please refer to the Amazon Return Policy.</p>
             </div>
           </div> <!-- Support Panel Ends -->
 
@@ -202,8 +202,8 @@
           <!-- Shipping Panel Starts -->
           <div class="tab-pane fade" id="shipping" role="tabpanel" aria-labelledby="shipping-tab">
             <div class="mt-3 ml-3">
-              <p>This item is Fulfilled by Amazon.in and ships based on Amazon.in Shipping Rates and Policies.</p>
-              <p>This item is Fulfilled by Amazon.in and ships based on Amazon.in Shipping Rates and Policies.</p>
+              <p>This item is Fulfilled by Amazon and ships based on Amazon Shipping Rates and Policies.</p>
+              <p>This item is Fulfilled by Amazon and ships based on Amazon Shipping Rates and Policies.</p>
             </div>
           </div> <!-- Shipping Panel Starts -->
         </div>
