--- a/seller_info.html
+++ b/seller_info.html
@@ -2,24 +2,16 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Amazon FavIcon -->
   <link rel="icon" href="img/amazon_favicon.ico" image="image/gif" size="16x16">
-  <!-- Bootstrap CSS
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> -->
-
-  <!-- Font Awesome CSS CDN -->
+ 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
     crossorigin="anonymous" />
-  <!-- Bootstrap CSS Local -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <!-- Drawer CSS File -->
   <link rel="stylesheet" href="css/bootstrap-drawer.min.css">
-  <!-- Custom CSS -->
   <link rel="stylesheet" href="css/custom.css">
   <title>Seller_info</title>
 </head>
@@ -28,10 +20,8 @@
   <!-- Navbar Starts -->
   <!-- Navbar Ends -->
 
-  <!-- Your Account Starts -->
   <div class="container mt-5">
     <h2>Your Account</h2>
-    <!-- Account Panel Starts -->
     <div class="row">
       <div class="col-md-4">
         <a href="seller_order.html" class="btn w-100">
@@ -74,7 +64,7 @@
           </div>
         </a>
       </div>
-    </div> <!-- Account Panel Starts -->
+    </div>
 
     <div class="row">
       <div class="col-md-4">
@@ -91,10 +81,9 @@
         </a>
       </div>
     </div>
-  </div> <!-- Your Account Ends -->
+  </div> 
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
@@ -104,9 +93,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
-  <!-- Drawer JS File -->
   <script src="js/bootstrap-drawer.min.js"></script>
-  <!-- Custom JavaScript -->
   <script src="js/custom.js"></script>
 </body>
 
