--- a/seller_order.html
+++ b/seller_order.html
@@ -2,22 +2,14 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Amazon FavIcon -->
   <link rel="icon" href="img/amazon_favicon.ico" image="image/gif" size="16x16">
-  <!-- Bootstrap CSS
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> -->
-
-  <!-- Font Awesome CSS CDN -->
+ 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- Bootstrap CSS Local -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <!-- Drawer CSS File -->
   <link rel="stylesheet" href="css/bootstrap-drawer.min.css">
-  <!-- Custom CSS -->
   <link rel="stylesheet" href="css/custom.css">
   <title>Seller-Orders</title>
 </head>
@@ -27,15 +19,13 @@
   <!-- Navbar Ends -->
 
   <div class="container mt-5 mb-5">
-    <!-- URL Breadcrumb Starts -->
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb bg-transparent ml-n3">
         <li class="breadcrumb-item"><a href="seller_info.html">Your Account</a></li>
         <li class="breadcrumb-item active text-danger" aria-current="page">Your Orders</li>
       </ol>
-    </nav> <!-- URL Breadcrumb Ends -->
+    </nav> 
 
-    <!-- Search Orders Starts -->
     <div class="row">
       <div class="col-md-4">
         <h3>Your Orders</h3>
@@ -55,9 +45,8 @@
           </div>
         </form>
       </div>
-    </div> <!-- Search Orders Starts -->
+    </div> 
 
-    <!-- Order Card Starts -->
     <div class="card mt-5">
       <div class="card-header">
         <div class="row">
@@ -98,9 +87,8 @@
           </div>
         </div>
       </div>
-    </div> <!-- Order Card Starts -->
+    </div> 
 
-    <!-- Order Card Starts -->
     <div class="card mt-5">
       <div class="card-header">
         <div class="row">
@@ -141,9 +129,8 @@
           </div>
         </div>
       </div>
-    </div> <!-- Order Card Starts -->
+    </div> 
 
-    <!-- Order Card Starts -->
     <div class="card mt-5">
       <div class="card-header">
         <div class="row">
@@ -184,8 +171,7 @@
           </div>
         </div>
       </div>
-    </div> <!-- Order Card Starts -->
-    <!-- Order Card Starts -->
+    </div> 
     <div class="card mt-5">
         <div class="card-header">
           <div class="row">
@@ -226,9 +212,8 @@
             </div>
           </div>
         </div>
-      </div> <!-- Order Card Starts -->
+      </div> 
 
-      <!-- Order Card Starts -->
     <div class="card mt-5">
         <div class="card-header">
           <div class="row">
@@ -269,11 +254,10 @@
             </div>
           </div>
         </div>
-      </div> <!-- Order Card Starts -->
+      </div> 
   </div>
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+ 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
@@ -283,9 +267,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
-  <!-- Drawer JS File -->
   <script src="js/bootstrap-drawer.min.js"></script>
-  <!-- Custom JavaScript -->
   <script src="js/custom.js"></script>
 </body>
 
