--- a/seller_profile.html
+++ b/seller_profile.html
@@ -2,24 +2,16 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Amazon FavIcon -->
   <link rel="icon" href="img/amazon_favicon.ico" image="image/gif" size="16x16">
-  <!-- Bootstrap CSS
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> -->
 
-  <!-- Font Awesome CSS CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
     crossorigin="anonymous" />
-  <!-- Bootstrap CSS Local -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <!-- Drawer CSS File -->
   <link rel="stylesheet" href="css/bootstrap-drawer.min.css">
-  <!-- Custom CSS -->
   <link rel="stylesheet" href="css/custom.css">
   <title>Seller-Profile</title>
 </head>
@@ -28,12 +20,9 @@
   <!-- Navbar Starts -->
   <!-- Navbar Ends -->
 
-  <!-- Seller Profile -->
   <div class="container my-5">
 
-    <!-- Top row -->
     <div class="row">
-      <!-- Seller Accont Details -->
       <div class="col-md-8">
         <h3>Welcome Again , Assem Mohamed </h3>
         <p>
@@ -48,7 +37,6 @@
           customer with the highest standard of customer service.</p>
       </div>
 
-      <!-- Ask a question to sellers -->
       <div class="col-md-4">
         <div class="card" style="width: 18rem; background-color: #f6f6f6;">
           <div class="card-body">
@@ -57,9 +45,8 @@
           </div>
         </div>
       </div>
-    </div> <!-- Top row ends -->
+    </div> 
 
-    <!-- NavTab Starts -->
     <div class="row my-3">
       <div class="col-md-12">
         <ul class="nav nav-tabs" style="background-color: #f6f6f6;" id="myTab" role="tablist">
@@ -77,18 +64,14 @@
           </li>
 
           <li class="nav-item" role="presentation">
-            <!-- Here Put Home Page -->
             <a class="nav-link" id="product-tab" href="#" aria-controls="product"
               aria-selected="false">Product</a>
           </li>
         </ul>
 
         <div class="tab-content" id="myTabContent">
-          <!-- Feedback Panel Starts -->
           <div class="tab-pane fade show active" id="feedback" role="tabpanel" aria-labelledby="feedback-tab">
-            <!-- Rating Row Starts -->
             <div class="row pt-3 pl-3">
-              <!-- Star Rating Starts -->
               <div class="col-md-2">
                 <P>
                   <i class="fas fa-star text-warning"></i>
@@ -97,22 +80,20 @@
                   <i class="fas fa-star text-warning"></i>
                   <i class="fas fa-star-half-alt text-warning"></i>
                 </P>
-              </div> <!-- Star Rating Ends -->
+              </div> 
 
-              <!-- Rating Text Starts -->
               <div class="col-md-6">
                 <p class="font-italic mb-0">
                  "Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque vel nam quod animi impedit dolore nesciunt deserunt explicabo iste ducimus!"
                 </p>
                 <small class="text-muted">By Hager Mohamed on 3 Feb, 2023.</small>
-              </div> <!-- Rating Text Ends -->
-            </div> <!-- Rating Row Ends -->
+              </div> 
+            </div> 
 
 
 
-            <!-- Rating Row Starts -->
+            
             <div class="row pt-3 pl-3">
-              <!-- Star Rating Starts -->
               <div class="col-md-2">
                 <P>
                   <i class="fas fa-star text-warning"></i>
@@ -121,23 +102,20 @@
                   <i class="far fa-star text-warning"></i>
                   <i class="far fa-star text-warning"></i>
                 </P>
-              </div> <!-- Star Rating Ends -->
+              </div> 
 
-              <!-- Rating Text Starts -->
               <div class="col-md-6">
                 <p class="font-italic mb-0">
                   "Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque vel nam quod animi impedit dolore nesciunt deserunt explicabo iste ducimus!"
 
                 </p>
                 <small class="text-muted">By Esraa Moahmed on 4 Feb, 2023. </small>
-              </div> <!-- Rating Text Ends -->
-            </div> <!-- Rating Row Ends -->
+              </div> 
+            </div> 
 
 
 
-            <!-- Rating Row Starts -->
             <div class="row pt-3 pl-3">
-              <!-- Star Rating Starts -->
               <div class="col-md-2">
                 <P>
                   <i class="fas fa-star text-warning"></i>
@@ -146,22 +124,19 @@
                   <i class="fas fa-star text-warning"></i>
                   <i class="fas fa-star-half-alt text-warning"></i>
                 </P>
-              </div> <!-- Star Rating Ends -->
+              </div> 
 
-              <!-- Rating Text Starts -->
               <div class="col-md-6">
                 <p class="font-italic mb-0">
                  "Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque vel nam quod animi impedit dolore nesciunt deserunt explicabo iste ducimus!"
 .
                 </p>
                 <small class="text-muted">By Hager Mohamed on 3 Feb, 2023.</small>
-              </div> <!-- Rating Text Ends -->
-            </div> <!-- Rating Row Ends -->
+              </div> 
+            </div> 
 
 
-            <!-- Rating Row Starts -->
             <div class="row pt-3 pl-3">
-              <!-- Star Rating Starts -->
               <div class="col-md-2">
                 <P>
                   <i class="fas fa-star text-warning"></i>
@@ -170,16 +145,15 @@
                   <i class="fas fa-star text-warning"></i>
                   <i class="fas fa-star-half-alt text-warning"></i>
                 </P>
-              </div> <!-- Star Rating Ends -->
+              </div> 
 
-              <!-- Rating Text Starts -->
               <div class="col-md-6">
                 <p class="font-italic mb-0">
                         "Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque vel nam quod animi impedit dolore nesciunt deserunt explicabo iste ducimus!"
                 </p>
                 <small class="text-muted">By Hager Mohamed on 3 Feb, 2023.</small>
-              </div> <!-- Rating Text Ends -->
-            </div> <!-- Rating Row Ends -->
+              </div> 
+            </div> 
 
             <div class="row mt-5">
               <div class="col-md-12 text-center">
@@ -189,26 +163,24 @@
                 </p>
               </div>
             </div>
-          </div> <!-- Feedback Panel Ends -->
+          </div> 
 
-          <!-- Support Panel Starts -->
           <div class="tab-pane fade" id="support" role="tabpanel" aria-labelledby="support-tab">
             <div class="mt-3 ml-3">
               <p>Please refer to the Amazon Return Policy.</p>
             </div>
-          </div> <!-- Support Panel Ends -->
+          </div> 
 
 
-          <!-- Shipping Panel Starts -->
           <div class="tab-pane fade" id="shipping" role="tabpanel" aria-labelledby="shipping-tab">
             <div class="mt-3 ml-3">
               <p>This item is Fulfilled by Amazon and ships based on Amazon Shipping Rates and Policies.</p>
               <p>This item is Fulfilled by Amazon and ships based on Amazon Shipping Rates and Policies.</p>
             </div>
-          </div> <!-- Shipping Panel Starts -->
+          </div> 
         </div>
       </div>
-    </div> <!-- NavTab Starts ends -->
+    </div> 
 
   </div>
 
@@ -222,8 +194,7 @@
     <!-- Sub footer starts -->
     <!-- Sub footer ends -->
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"></script>
@@ -233,9 +204,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"></script>
-    <!-- Drawer JS File -->
     <script src="js/bootstrap-drawer.min.js"></script>
-    <!-- Custom JavaScript -->
     <script src="js/custom.js"></script>
 </body>
 
